# eth-session-trading-bot

./: .bandit  .env.example  .flake8  .gitignore  API_TESTING_GUIDE.md  AUTO_OPTIMIZATION_GUIDE.md  BINANCE_IP_SETUP_GUIDE.md  CLOUDFLARE_SETUP.md  CLOUDFLARE_STEP_BY_STEP.md  CLOUDFLARE_TUNNEL_COMPLETE_GUIDE.md  DOMAIN_EXAMPLES.md  DOMAIN_PURCHASE_GUIDE.md  Dockerfile  FINAL_CONNECTION_TEST.md  Procfile  RAILWAY_CLEANUP_GUIDE.md  RAILWAY_ENV_SETUP.md  RAILWAY_SETUP.md  README.md  advanced_risk_system.py  api_test_suite.py  auto_optimizer.py  binance_cloudflare_client.py  binance_cloudflare_ips.txt  binance_connection_test.py  binance_data_collector.py  binance_ip_auto_manager.py  binance_ip_solution.md  binance_ip_update_guide_20251017_172049.txt  binance_proxy_client.py  binance_proxy_worker.js  check_railway_domain.py  check_railway_ip.py  cloudflare_integration.py  cloudflare_proxy_setup.md  cloudflare_tunnel_setup.md  cloudflared-config.yml  convert_cloudflare_ips.py  current_parameters.json  current_railway_ip.md  (+35 more)
.github/workflows/: ci-cd.yml  ci.yml
.kiro/specs/advanced-optimization-pipeline/: design.md  requirements.md  tasks.md
config/: current_parameters.json  railway.json
docs/: API_TESTING_GUIDE.md  COMPLETE_SETUP_SUMMARY.md  OPTIMIZATION_RESULTS.md  RAILWAY_SETUP.md  RAILWAY_STATIC_IP_SETUP.md
results/: full_backtest_20251018_143446.json  real_backtest_20251018_131955.json
src/: __init__.py
src/core/: __init__.py  fast_data_engine.py  performance_evaluator.py
src/monitoring/: __init__.py  binance_ip_auto_manager.py  binance_ip_monitor.py  failure_recovery_system.py  ip_monitoring_system.py  realtime_monitoring_system.py
src/optimization/: __init__.py  auto_optimizer.py  global_search_optimizer.py  local_search_optimizer.py  optimization_pipeline.py  parameter_manager.py
src/trading/: __init__.py  binance_data_collector.py  dd_scaling_system.py  eth_session_strategy.py  kelly_position_sizer.py  trading_bot.py
src/utils/: __init__.py  advanced_risk_system.py  fixed_risk_management.py  performance_optimizer.py
src/validation/: __init__.py  montecarlo_simulator.py  performance_validation.py  statistical_validator.py  timeseries_validator.py  walkforward_analyzer.py
tests/: __init__.py  conftest.py  run_all_tests.py
tests/integration/: test_integration_tests.py
tests/performance/: test_performance_validation.py
tests/unit/: test_unit_tests.py
